--- a/Developments/GUI/bower.json
+++ b/Developments/GUI/bower.json
@@ -10,7 +10,8 @@
     "angular-route": "~1.5.8",
     "angular-sanitize": "~1.5.8",
     "angular-touch": "~1.5.8",
-    "angular-ui-router": "~0.2.12"
+    "angular-ui-router": "~0.2.12",
+    "ngDraggable": "^0.1.11"
   },
   "devDependencies": {
     "angular-mocks": "~1.5.8"
