--- a/Developments/GUI/package.json
+++ b/Developments/GUI/package.json
@@ -45,6 +45,7 @@
     "express": "^4.15.4",
     "http": "0.0.0",
     "method-override": "^2.3.9",
+    "mongoose": "^4.11.12",
     "morgan": "^1.8.2"
   }
 }
