--- a/Developments/GUI/bower.json
+++ b/Developments/GUI/bower.json
@@ -11,7 +11,8 @@
     "angular-sanitize": "~1.5.8",
     "angular-touch": "~1.5.8",
     "angular-ui-router": "~0.2.12",
-    "ngDraggable": "^0.1.11"
+    "ngDraggable": "^0.1.11",
+    "angularjs-social-login": "^2.6.1"
   },
   "devDependencies": {
     "angular-mocks": "~1.5.8"
