--- a/Developments/GUI/bower.json
+++ b/Developments/GUI/bower.json
@@ -12,7 +12,8 @@
     "angular-touch": "~1.5.8",
     "angular-ui-router": "~0.2.12",
     "ngDraggable": "^0.1.11",
-    "angularjs-social-login": "^2.6.1"
+    "angularjs-social-login": "^2.6.1",
+    "ng-dropzone": "ngdropzone#^2.0.2"
   },
   "devDependencies": {
     "angular-mocks": "~1.5.8"
