--- a/Developments/GUI/package.json
+++ b/Developments/GUI/package.json
@@ -43,6 +43,7 @@
   "dependencies": {
     "body-parser": "^1.18.1",
     "express": "^4.15.4",
+    "express-fileupload": "^0.2.0",
     "http": "0.0.0",
     "method-override": "^2.3.9",
     "mongoose": "^4.11.12",
