--- a/Developments/GUI/package.json
+++ b/Developments/GUI/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "devDependencies": {
     "autoprefixer-core": "^5.2.1",
+    "express-fileupload": "^0.2.0",
     "grunt": "^0.4.5",
     "grunt-angular-templates": "^0.5.7",
     "grunt-concurrent": "^1.0.0",
@@ -43,8 +44,8 @@
   "dependencies": {
     "body-parser": "^1.18.1",
     "express": "^4.15.4",
-    "express-fileupload": "^0.2.0",
     "http": "0.0.0",
+    "jquery-csv": "^0.8.3",
     "method-override": "^2.3.9",
     "mongoose": "^4.11.12",
     "morgan": "^1.8.2"
