change main ui module

--- a/Developments/GUI/package.json
+++ b/Developments/GUI/package.json
@@ -28,7 +28,9 @@
     "grunt-wiredep": "^2.0.0",
     "jasmine-core": "^2.7.0",
     "jit-grunt": "^0.9.1",
+    "jquery.panzoom": "^3.2.2",
     "jshint-stylish": "^1.0.0",
+    "junk": "^2.1.0",
     "karma": "^1.7.0",
     "karma-jasmine": "^1.1.0",
     "karma-phantomjs-launcher": "^1.0.4",
