--- a/Developments/GUI/package.json
+++ b/Developments/GUI/package.json
@@ -50,6 +50,7 @@
     "jquery-csv": "^0.8.3",
     "method-override": "^2.3.9",
     "mongoose": "^4.11.12",
-    "morgan": "^1.8.2"
+    "morgan": "^1.8.2",
+    "mysql": "^2.15.0"
   }
 }
