--- a/Developments/GUI/package.json
+++ b/Developments/GUI/package.json
@@ -49,6 +49,7 @@
     "http": "0.0.0",
     "jquery-csv": "^0.8.3",
     "method-override": "^2.3.9",
+    "moment": "^2.19.3",
     "mongoose": "^4.11.12",
     "morgan": "^1.8.2",
     "mysql": "^2.15.0"
