--- a/Developments/GUI/bower.json
+++ b/Developments/GUI/bower.json
@@ -14,7 +14,8 @@
     "ngDraggable": "^0.1.11",
     "angularjs-social-login": "^2.6.1",
     "ng-dropzone": "ngdropzone#^2.0.2",
-    "angular-ui-bootstrap": "^2.5.1"
+    "angular-ui-bootstrap": "^2.5.1",
+    "ng-lodash": "^0.5.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.5.8"
