--- a/Developments/GUI/package.json
+++ b/Developments/GUI/package.json
@@ -48,6 +48,7 @@
     "express": "^4.15.4",
     "http": "0.0.0",
     "jquery-csv": "^0.8.3",
+    "lodash": "^4.17.4",
     "method-override": "^2.3.9",
     "moment": "^2.19.3",
     "mongoose": "^4.11.12",
